; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/devices/extr_m25p80.c_read_sr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/devices/extr_m25p80.c_read_sr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m25p = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@OPCODE_RDSR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"error %d reading SR\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.m25p*)* @read_sr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_sr(%struct.m25p* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.m25p*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.m25p* %0, %struct.m25p** %3, align 8
  %7 = load i32, i32* @OPCODE_RDSR, align 4
  store i32 %7, i32* %5, align 4
  %8 = load %struct.m25p*, %struct.m25p** %3, align 8
  %9 = getelementptr inbounds %struct.m25p, %struct.m25p* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = call i64 @spi_write_then_read(%struct.TYPE_2__* %10, i32* %5, i32 1, i32* %6, i32 1)
  store i64 %11, i64* %4, align 8
  %12 = load i64, i64* %4, align 8
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %24

14:                                               ; preds = %1
  %15 = load %struct.m25p*, %struct.m25p** %3, align 8
  %16 = getelementptr inbounds %struct.m25p, %struct.m25p* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i64, i64* %4, align 8
  %20 = trunc i64 %19 to i32
  %21 = call i32 @dev_err(i32* %18, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %20)
  %22 = load i64, i64* %4, align 8
  %23 = trunc i64 %22 to i32
  store i32 %23, i32* %2, align 4
  br label %26

24:                                               ; preds = %1
  %25 = load i32, i32* %6, align 4
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %24, %14
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i64 @spi_write_then_read(%struct.TYPE_2__*, i32*, i32, i32*, i32) #1

declare dso_local i32 @dev_err(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
